--- a/i3status.conf
+++ b/i3status.conf
@@ -1,1 +1,90 @@
-/etc/i3status.conf
+# i3status configuration file.
+# see "man i3status" for documentation.
+
+# It is important that this file is edited as UTF-8.
+# The following line should contain a sharp s:
+# ß
+# If the above line is not correctly displayed, fix your editor first!
+
+general {
+        colors = true
+        interval = 5
+}
+
+#order += "ipv6" # not needed atm
+#order += "battery all"
+order += "load"
+order += "bluetooth"
+order += "wireless _first_"
+order += "ethernet _first_"
+order += "whatismyip"
+order += "file_status sdb"
+order += "file_status sdc"
+order += "disk /"
+order += "disk /home"
+order += "battery_level"
+order += "backlight" # py3status module so config must be in single quotes
+order += "volume_status"
+order += "tztime local"
+order += "xrandr"
+
+wireless _first_ {
+        format_up = " (%quality at %essid) %ip"
+        format_down = " down"
+}
+
+ethernet _first_ {
+        # if you use %speed, i3status requires root privileges
+        format_up = " %ip (%speed)"
+        format_down = " down"
+}
+
+battery all {
+        format = "%status %percentage %remaining"
+}
+
+tztime local {
+        format = ' %d.%m.%Y  %H:%M:%S'
+}
+
+load {
+        format = " %1min"
+}
+
+disk "/" {
+        format = "root %avail"
+}
+
+disk "/home" {
+        format = "home %avail"
+}
+
+backlight {
+	cache_timeout = 15
+	format = ' {level}%'
+}
+
+battery_level {
+	blocks = ""
+	charging_charater ""
+	
+}
+
+bluetooth {
+	format_no_conn_prefix = ' '
+	format_prefix = ' '
+	format_no_conn = ''
+}
+
+file_status "sdb" {
+	path = '/dev/sdb'
+	format = 'sdb'
+}
+file_status "sdc" {
+	path = '/dev/sdc'
+	format = 'sdc'
+}
+
+volume_status {
+	cache_timeout 15
+}
